<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:layout_centerHorizontal="true">
    
     <TextView
        android:id="@+id/TextView01"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    style="@style/home_AppTitle" />
     
     <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="4.0dip"
        android:paddingTop="5.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01">
    
	    <Button
	        android:id="@+id/button1"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
	        android:onClick="host"
	        android:text="@string/button_host" />
	   
	    <Button
	        android:id="@+id/button2"
	        android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
	        android:onClick="join"
	        android:text="@string/button_client" />
	   
	    <Button
	        android:id="@+id/button3"
	        android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
	        android:onClick="options"
	        android:text="@string/button_options" />
	    
    </LinearLayout>
    
</RelativeLayout>